website: news: Correctly display inline images in posts.
* website/static/base/css/news.css (img): New category.

--- a/website/static/base/css/news.css
+++ b/website/static/base/css/news.css
@@ -29,3 +29,17 @@
 p {
     hyphens: auto;
 }
+
+img {
+    display: block;
+    margin: auto;
+    padding: 20px;
+}
+
+@media screen and (min-width: 1024px) {
+    img {
+	float: right;
+	margin-left: 20px;
+	padding: 0px;
+    }
+}
