website: news: Add 'inline-image' class.
This is a followup to 4c322d36bc02e5e35464afa753fbf1b1da9de8f6, which
had the unintended effect of moving the logo in the top banner to the
right.

* website/posts/growing-our-build-farm.html: Use the 'inline-image'
class.
* website/static/base/css/news.css (.inline-image): New category.

--- a/website/static/base/css/news.css
+++ b/website/static/base/css/news.css
@@ -30,14 +30,14 @@ p {
     hyphens: auto;
 }
 
-img {
+.inline-image {
     display: block;
     margin: auto;
     padding: 20px;
 }
 
 @media screen and (min-width: 1024px) {
-    img {
+    .inline-image {
 	float: right;
 	margin-left: 20px;
 	padding: 0px;
