website: home: Make screenshots responsive.
* website/static/base/css/base.css (.img-responsive): New class.
* website/static/base/css/index.css (#screens-box a)
(.screenshot-thumb): Adapt to small screens.
* website/www.scm (screenshot): Apply new class.

--- a/website/static/base/css/base.css
+++ b/website/static/base/css/base.css
@@ -137,6 +137,12 @@ a.hlink-yellow-boxed:hover {
     width: 100%;
 }
 
+.img-responsive {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+
 pre {
     background-color: #F2EFE4;
     border-style: solid;
