--- a/website/static/blog/css/post.css
+++ b/website/static/blog/css/post.css
@@ -16,6 +16,10 @@ video {
     max-width: 100%;
 }
 
+article {
+    line-height: 1.4em;
+}
+
 .post-metadata {
     color: #4D4D4D;
     margin-bottom: 50px;
