--- a/website/static/base/css/page.css
+++ b/website/static/base/css/page.css
@@ -6,15 +6,18 @@ h3,
 h4,
 h5 {
     color: #4D4D4D;
+    line-height: 1.2em;
 }
 
 h2 {
     font-size: 2.5em;
     text-align: center;
+    line-height: 1.2em;
 }
 
 h3 {
     font-size: 1.5em;
+    line-height: 1.2em;
 }
 
 .page {
