website: Remove uses of "GuixSD".
* website/apps/base/data.scm: Remove "GuixSD or".
* website/apps/base/templates/contact.scm (contact-t): Likewise.
* website/apps/base/templates/components.scm (navbar): Change branding
from "GuixSD" to "Guix".
* website/apps/base/templates/help.scm (help-t): Write "Guix System"
instead of "GuixSD".
* website/apps/download/data.scm (system-downloads): Likewise.
* website/apps/download/templates/download.scm (download-t): Likewise.
* website/apps/base/templates/home.scm (home-t): Rewrite to avoid
GuixSD/Guix dichotomy.
* website/static/base/img/Guix-logo.png: New file.
* website/static/base/css/navbar.css (.branding): Use it.

--- a/website/static/base/css/navbar.css
+++ b/website/static/base/css/navbar.css
@@ -22,7 +22,7 @@
 
 .branding:link,
 .branding:visited {
-    background-image: url("../img/GuixSD-logo.png");
+    background-image: url("../img/Guix-logo.png");
     background-position: bottom;
     background-repeat: no-repeat;
     border-style: none;
