--- a/website/static/base/css/navbar.css
+++ b/website/static/base/css/navbar.css
@@ -53,8 +53,13 @@
     position: relative;
 }
 
+.menu-hidden-input {
+    display: none;
+}
+
 .menu-item:link,
-.menu-item:visited {
+.menu-item:visited,
+label.menu-item {
     background-color: transparent;
     background-image: url("../img/link-arrow.png");
     background-position: 97% 50%;
@@ -104,6 +109,10 @@
     background-position: top;
 }
 
+.hline {
+    display: none;
+}
+
 
 
 
@@ -134,11 +143,11 @@
         text-align: center;
     }
 
-    .menu-item:active,
-    .menu-item:focus,
-    .menu-item:hover,
-    .menu-item-active:link,
-    .menu-item-active:visited {
+    a.menu-item:active,
+    a.menu-item:focus,
+    a.menu-item:hover,
+    a.menu-item-active:link,
+    a.menu-item-active:visited {
 	background-image: url("../img/menu-item-active-bg.png");
 	background-position: bottom center;
 	background-repeat: no-repeat;
@@ -149,31 +158,53 @@
     }
 
     .dropdown:hover .submenu {
-	display: block;
-	right: 0px;
+        width: initial;
+        height: initial;
+        min-width: 150px;
+        overflow: initial;
     }
 
-    .dropdown-btn:link,
-    .dropdown-btn:visited {
+    .dropdown-btn {
 	background-image: url("../img/dropdown-bg.png");
 	background-position: bottom right;
 	background-repeat: no-repeat;
 	padding-right: 13px;
+        cursor: pointer;
     }
 
     .dropdown-btn:active,
-    .dropdown-btn:focus,
     .dropdown-btn:hover {
-	background-position: top right;
+        background-image: url("../img/dropdown-bg.png");
+        background-position: top right;
+    }
+
+    label[for=all-dropdowns-hidden] {
+        text-shadow: #fff 0px -2px 15px, #fff 0px -2px 10px;
+    }
+
+    .hline {
+        display: block;
+        width: 100%;
+        height: 1px;
     }
 
     .submenu {
 	background-color: transparent;
-	display: none;
-	min-width: 150px;
+        z-index: 10;
+        display: block;
+        overflow: hidden;
+        width: 0;
+        height: 0;
 	padding-top: 20px;
 	position: absolute;
-	z-index: 10;
+        right: 0px;
+    }
+
+    .submenu:focus-within {
+        width: initial;
+        height: initial;
+        min-width: 150px;
+        overflow: initial;
     }
 
     .submenu-triangle {
